# dieprobezeit

./: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  TODO.md  convert_pdf.rs  docker-compose.yml  flake.nix  generate_entities.sh  generate_migration.sh  get_pdftosvg.sh  justfile  pdf2svg.sh  pingoo.yml  restart-on-https-down.sh
.github/workflows/: docker-backend.yml
assets/: tailwind.css
assets/scripts/: pdf-renderer.js
assets/styling/: archiv.css  main.css  navbar.css  pdf.css
src/: convert_pdf.rs  cookies.rs  feed.rs  i18n.rs  main.rs  sync_db.rs  sync_feedback.rs  track_views.rs
src/components/: editions.rs  mod.rs
src/db/: init_and_get.rs  mod.rs
src/db/entities/: edition.rs  feedback.rs  mod.rs  prelude.rs  reads.rs  views.rs
src/db/migrations/: m20251015_085200_create_editions.rs  m20251015_105110_add_views.rs  m20251105_094423_add_title_to_edition.rs  m20251105_122406_add_feedback.rs  m20251105_125132_make_feedback_email_optional.rs  m20251210_110103_add_hidden_flag_to_edition.rs  m20260203_204144_read_event_log.rs  m20260203_204144_view_event_log.rs  m20260205_131102_non_nullable_client_id.rs  m20260214_134252_mark_old_views.rs  m20260214_141218_add_read_timestamp.rs  mod.rs
src/views/: about.rs  archiv.rs  edition.rs  feedback.rs  home.rs  mod.rs  navbar.rs  notfound.rs
