[package]
name = "mng-schuelerziitig"
version = "0.1.0"
authors = ["jullang <jullanggit@proton.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.0", features = ["router", "fullstack", "web"] }
dioxus-html = { version = "0.7.0", features = ["serialize"] } # for .parsed_values()
sea-orm = { version = "1.1.17",  default-features = false, features = [
  "macros",
  "with-time",
] }
sea-orm-migration = { version = "1.1.17", optional = true, default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3.44", features = ["serde"] }
tokio = { version = "1.48.0", optional = true, default-features = false, features = [
  "macros",
  "rt-multi-thread",
] }
tower-http = { version = "0.6.6", optional = true, features = ["fs"] }

[features]
default = []
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:sea-orm-migration",  "sea-orm/runtime-tokio-rustls", "sea-orm/sqlx-sqlite", "dep:tokio", "dep:tower-http"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
