[package]
name = "dieprobezeit"
version = "0.1.0"
authors = ["jullang <jullanggit@proton.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atom_syndication = { version = "0.12.7", optional = true }
dioxus = { version = "0.7.3", features = ["router", "fullstack"] }
# for .parsed_values()
dioxus-html = { version = "0.7.3", features = ["serialize"] }

sea-orm = { version = "1.1.19", default-features = false, features = [
	"macros",
	"with-time",
] }
sea-orm-migration = { version = "1.1.19", optional = true, default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3.44", features = ["serde"] }
tokio = { version = "1.48.0", optional = true, default-features = false, features = [
	"macros",
	"rt-multi-thread",
] }
tower-http = { version = "0.6.6", optional = true, features = ["fs"] }

web-sys = { version = "0.3", optional = true, features = [
	"Window",
	"HtmlDocument",
	"Storage",
	"Crypto",
] }

[features]
default = []
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web", "dep:web-sys"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
server = [
	"dioxus/server",
	"dep:sea-orm-migration",
	"sea-orm/runtime-tokio-rustls",
	"sea-orm/sqlx-sqlite",
	"dep:tokio",
	"dep:tower-http",
	"dep:atom_syndication",
]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.release]
strip = false
incremental = true
lto = "thin"
